# SimpleServer

./: CMakeLists.txt  README.md  main.cpp  methods.hpp  poster.html
cmake/: FindNetworking.cmake
example/: CMakeLists.txt  main.cpp
include/SimpleServer/: server.hpp  simpleserver.hpp
include/SimpleServer/detail/: methods.hpp  portableSocket.hpp  statusCodes.hpp  utility.hpp
src/: portableSocket.hpp  utility.hpp
